# haskell-ptree

./: README  TODO  ptree.cabal
Data/: PTree.hs
Data/PTree/: Debug.hs  Internal.hs  PTree.hs
perf/: BenchCommon.hs  BenchMap.hs  BenchPTree.hs  BenchTrie.hs  Main.hs  run.sh  testdata
perf/data/: rnd-10k.data  seq-10k.data  seq-1k.data  seq-50k.data
test/: Main.hs  Makefile  QuickCheckUtils.hs
test/perf/: BenchCommon.hs  BenchMap.hs  BenchPTree.hs  BenchTrie.hs  run.sh
test/perf/data/: rnd-1k.data  rnd-50k.data
test/qc/: Main.hs  Makefile  QuickCheckUtils.hs
