Name:                   ptree
Version:                0.1
License:                MIT
License-file:           LICENSE
Author:                 Chris Pettitt
Maintainer:             cpettitt@gmail.com
Copyright:              Copyright (c) 2010 Chris Pettitt
Category:               Data, Data Structures
Synopsis:               Patricia tree implementation
Description:            Patricia tree implementation

Build-Type:             Simple
Cabal-Version:          >=1.4

Extra-Source-Files: test/Main.hs

Library
    Build-Depends:      base, bytestring, containers
    Exposed-Modules:    Data.PTree
    Ghc-Options:        -Wall
